This changelog shows an overview of what changed throughout releases, with the latest release or development log on top.

#6680 Add a "View Website" button to the list resource screen (on context level).
Re-invent checkbox TV support (was built in but not available).
Prevent breaking the form when values for radio/checkbox/select boxes include html.

++++++++++++++++++++++++++++++++
++   HandyMan 1.0.0-rc2       ++
++   Released on 2012-01-06   ++
++++++++++++++++++++++++++++++++
Refactor included runProcessor to properly wrap modX::runProcessor yet be backwards compatible.
Fix menu on dialog screens.
#6543 Using without textile runs htmlentities on html tags
Fix credit list markup and update list.

++++++++++++++++++++++++++++++++
++   HandyMan 1.0.0-rc1       ++
++   Released on 2011-12-25   ++
++++++++++++++++++++++++++++++++

#6295 Prevent sticky footer/header bars from popping up over input fields on small screens.
#5906 Basic permission checking when building option menus.
Default textile integration to OFF.
#5984 Remove home button from header, move it to footer bar. Gets rid of create resource for now.
#6008 Improve credits list on homepage for smaller screens, better tribute to premier contributors.
Update resource/view for more granular control, different displays (text/boolean for now) and using lexicons for headers.
#6113 Fix lexicons for settings on resource/view
#5994 Inherit template from parent when creating a new resource, or use default_template system setting.
Update jQuery  Mobile to 1.0-final (Great job jQuery Mobile team!!)
#5976 Enhanced support for date input type TVs on mobile devices.
#5867 Support for MODX 2.0.8.
Fix breadcrumb links passing the wrong URL parameter.
#5957 Fix slash issues on server configurations which have magic_quotes_gpc enabled. 
Add option to disable/enable textile on create resource controller.
Further internationalization efforts. Will need more work than this, but every bit helps..!