@@ -1,0 +1,2 @@
+<p>Clearing the cache...</p>
+<p>Result: <strong>[[+results]]</strong></p>
